[metadata]
name = enigmx
version = 0.0.1
#url =
author = Quantmoon technologies
author_email = info@quantmoon.tech
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = enigmx first release
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7